added review form on product page

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -25,5 +25,22 @@
   <%= @product.price %>
 </p>
 
+<div>
+  <% @reviews.each do |review| %>
+    <div>
+      <strong><%= review.user.user_name %></strong>
+      <br />
+      <p><%= review.body %></p>
+      <% if user_signed_in? && review.user == current_user %>
+        <p><%= link_to 'Delete', review_path(review), method: :delete %></p>
+      <% end %>
+    </div>
+  <% end %>
+  <% if user_signed_in? %>
+    <%= render 'reviews/form' %>
+  <% end %>
+</div>
+
+<%= link_to 'Rreview', reviews_path %> |
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
