--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="field">
     <%= form.label :user_id %>
-    <%= form.text_field :user_id, id: :product_user_id %>
+    <%= form.hidden_field :user_id, id: :product_user_id %>
   </div>
 
   <div class="field">
