--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_with(model: review, local: true) do |form| %>
-  <% if review.errors.any? %>
+<%= form_with(model: @review, local: true) do |form| %>
+  <% if @review.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(review.errors.count, "error") %> prohibited this review from being saved:</h2>
 
@@ -17,13 +17,13 @@
   </div>
 
   <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id, id: :review_user_id %>
+    <%#= form.label :user_id %>
+    <%= form.hidden_field :user_id, id: :review_user_id, :value => params[:id] %>
   </div>
 
   <div class="field">
-    <%= form.label :product_id %>
-    <%= form.text_field :product_id, id: :review_product_id %>
+    <%#= form.label :product_id %>
+    <%= form.hidden_field :product_id, id: :review_product_id, :value => params[:id] %>
   </div>
 
   <div class="actions">
