--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -28,4 +28,5 @@
 
 <br>
 
-<%= link_to 'New Review', new_review_path %>
+<%= link_to 'New Review', new_review_path %> |
+<%= link_to 'Back', products_path %>
