can add reviews on each product

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,7 +16,7 @@
 </p>
 
 <p>
-  <strong>User:</strong>
+  <strong>Product User:</strong>
   <%= @product.user %>
 </p>
 
@@ -25,22 +25,35 @@
   <%= @product.price %>
 </p>
 
-<div>
-  <% @reviews.each do |review| %>
-    <div>
-      <strong><%= review.user.user_name %></strong>
-      <br />
-      <p><%= review.body %></p>
-      <% if user_signed_in? && review.user == current_user %>
-        <p><%= link_to 'Delete', review_path(review), method: :delete %></p>
-      <% end %>
-    </div>
-  <% end %>
-  <% if user_signed_in? %>
-    <%= render 'reviews/form' %>
-  <% end %>
-</div>
+<%= render 'reviews/form' %>
 
-<%= link_to 'Rreview', reviews_path %> |
+<%#= link_to 'Rreview', review_path(@review) %>
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
+
+<br><br>
+
+  <% if @reviews.any?%>
+<p>
+  <strong>Reviews:</strong><br>
+
+  <table class="table">
+    <thead class="thead-default">
+      <tr>
+        <th>No.</th>
+        <th>Content</th>
+        <th>Username</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @reviews.each do |review| %>
+        <tr>
+          <th scope="row"><%= review.id %></th>
+          <td><%= review.content %></td>
+          <td><%= review.user.profile.username if defined? review.user.profile %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% end %>
+</p>
