--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,7 +8,7 @@
       <th>Image</th>
       <th>Name</th>
       <th>Rating</th>
-      <th>User</th>
+      <!-- <th>User</th> -->
       <th>Price</th>
       <th colspan="3"></th>
     </tr>
@@ -20,7 +20,7 @@
         <td><%= product.image %></td>
         <td><%= product.name %></td>
         <td><%= product.rating %></td>
-        <td><%= product.user %></td>
+        <!-- <td><%#= product.user %></td> -->
         <td><%= product.price %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
